# qmltest

./: .gitignore  CMakeLists.txt  Main.qml  SecondNavView.qml  appcoordinator.cpp  appcoordinator.h  controlviewmodel.cpp  controlviewmodel.h  main.cpp
